# sports-load-management-agent

./: .gitignore  README.md
backend/: langgraph.json  pyproject.toml
backend/src/sports_load_agent/: __init__.py  agent_graph.py  agent_state.py  app.py  chat_agent.py  settings.py
backend/src/sports_load_agent/api/: __init__.py  routes.py
backend/src/sports_load_agent/core/: __init__.py  load_calculator.py  visualizations.py
backend/src/sports_load_agent/nodes/: __init__.py  data_ingest_node.py  data_process_node.py  report_generation_node.py  visualization_node.py
backend/src/sports_load_agent/tools/: __init__.py  data_query_tools.py  python_sandbox.py  visualization_tools.py
backend/src/sports_load_agent/utils/: __init__.py  column_mapper.py  llm_factory.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Chat.tsx  FileUpload.tsx  ProcessingStatus.tsx  Results.tsx
frontend/src/hooks/: useChat.ts  useProcessing.ts
frontend/src/types/: api.ts
