[project]
name = "sports-load-agent"
version = "0.1.0"
description = "LangGraph-based sports load management agent for training load analysis"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "xlsxwriter>=3.2.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sports_load_agent"]

